# gx2gl

./: CMakeLists.txt  README
demos/nehe/lesson2/: CMakeLists.txt  README  lesson2.cpp
demos/nehe/lesson6/: CMakeLists.txt  README  lesson6.c
demos/two_screens/: CMakeLists.txt  main.cpp
include/GL/: gl.h  glu.h  glut.h  gx2gl.h  gx2gl_ext.h
src/: CMakeLists.txt  context.h  glff_shader.h  gx2gl.c  gx2glu.c  gx2glut.c  matrix.c  matrix.h  proc.c  texture.c  texture.h
src/shaders/: README  glff.psh  glff.vsh
